Sun Aug 30 13:00:11 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (add): shortcut implemented for fixnums.
	  (sub): ditto.
	  (mul): ditto.

Sun Aug 30 10:24:43 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (eq): apply RTEST.
	  (ne): ditto.
	  (add): avoid method dispatch for bignums.
	  (sub): ditto.
	  (mul): ditto.
	  (mod): ditto.

Sun Aug 30 09:45:11 2009  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigmul1_single): new function specialized respect to
	  multiply two single digit bignums.
	  (bigmul0): use bigmul1_single.

Sun Aug 30 03:59:43 2009  Tanaka Akira  <akr@fsij.org>

	* timev.h (TIME_SCALE): defined as 1000000000.
	  (struct vtm): subsec is replaced by subsecx.
	  subsec * TIME_SCALE == subsecx.
	
	* time.c: avoid rational in most cases.
	  (struct time_object): timev is replaced by timexv.
	  timev * TIME_SCALE == timexv.

Sun Aug 30 03:17:25 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (init_leap_second_info): use TIMET_MAX.

Sun Aug 30 01:15:31 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/zlib/zlib.c (gzfile_read_all): use gzfile_newstr;
	  set and convert its encoding. [ruby-dev:38304]

Sat Aug 29 20:40:02 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* vm_eval.c (rb_call0): gets rid of checking method cache twice.

	* method.h (rb_get_method_entry): added a prototype of the function.
	  (rb_method_entry_without_cache): more friendly name.

Sat Aug 29 12:16:47 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tmpdir.rb (Dir.mktmpdir): rolled back r24699.  [ruby-dev:39193]

Sat Aug 29 03:27:17 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tempfile.rb (Tempfile#make_tmpname): removed thread race
	  condition.

	* lib/tmpdir.rb (Dir.mktmpdir): ditto.

Fri Aug 28 20:29:34 2009  Akinori MUSHA  <knu@iDaemons.org>

	* lib/tempfile.rb (Tempfile#callback): Debug information should be
	  output to stderr, not stdout; pointed out by akira yamada.
	  cf. [ruby-dev:39072]

Fri Aug 28 20:34:24 2009  Masaki Suketa  <masaki.suketa@nifty.ne.jp>
